samples/bad/bad024.lat
// Path with no return
int main() {
    if (false)
       return 0;
}
